project(monitor)
cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../)
include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB CPPS "*.cpp")
#add_definitions(-Wall -O2)
find_package(Threads)
if(NOT Threads_FOUND)
	message(SEND_ERROR "Sorry, failed to find threads")
	return()
endif(Threads_FOUND)
find_package (Boost REQUIRED COMPONENTS system filesystem)
if(Boost_FOUND)
	include_directories(SYSTEM ${Boost_INCLUDE_DIR})
else()
	message(SEND_ERROR "Sorry, failed to find boost")
	return()
endif(Boost_FOUND)
set(USED_LIBS ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
add_executable(${PROJECT_NAME} ${CPPS})
target_link_libraries(${PROJECT_NAME} ${USED_LIBS})
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
